// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination > renders the pagination component with correct number of pages with ellipsis 1`] = `
<nav
  class="ds:inline-flex ds:list-none ds:items-center ds:justify-center ds:gap-3"
  data-part="root"
  data-scope="pagination"
  dir="ltr"
  id="pagination::r1:"
>
  <button
    aria-label="Previous"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:disabled:text-inactive-gray ds:disabled:cursor-not-allowed ds:bg-bg-gray-2 ds:text-black"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination::r1::prev"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>
  <button
    aria-current="page"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-accent ds:text-white ds:font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination::r1::item:1"
    type="button"
  >
    1
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:2"
    type="button"
  >
    2
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:3"
    type="button"
  >
    3
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:4"
    type="button"
  >
    4
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="5"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:5"
    type="button"
  >
    5
  </button>
  <div
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-default ds:bg-bg-gray-2 ds:text-black"
    data-part="ellipsis"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::ellipsis:5"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </div>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="10"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::item:10"
    type="button"
  >
    10
  </button>
  <button
    aria-label="Next"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r1::next"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>
</nav>
`;

exports[`Pagination > renders the pagination component with correct number of pages without ellipsis 1`] = `
<nav
  class="ds:inline-flex ds:list-none ds:items-center ds:justify-center ds:gap-3"
  data-part="root"
  data-scope="pagination"
  dir="ltr"
  id="pagination::r0:"
>
  <button
    aria-label="Previous"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:disabled:text-inactive-gray ds:disabled:cursor-not-allowed ds:bg-bg-gray-2 ds:text-black"
    data-disabled=""
    data-part="prev-trigger"
    data-scope="pagination"
    dir="ltr"
    disabled=""
    id="pagination::r0::prev"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>
  <button
    aria-current="page"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-accent ds:text-white ds:font-bold"
    data-index="1"
    data-part="item"
    data-scope="pagination"
    data-selected=""
    dir="ltr"
    id="pagination::r0::item:1"
    type="button"
  >
    1
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="2"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:2"
    type="button"
  >
    2
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="3"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:3"
    type="button"
  >
    3
  </button>
  <button
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black ds:font-bold"
    data-index="4"
    data-part="item"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::item:4"
    type="button"
  >
    4
  </button>
  <button
    aria-label="Next"
    class="ds:sm:min-w-[37px] ds:min-h-7 ds:min-w-7 ds:sm:min-h-[37px] ds:p-2 ds:rounded-full ds:flex ds:justify-center ds:items-center ds:cursor-pointer ds:bg-bg-gray-2 ds:text-black"
    data-part="next-trigger"
    data-scope="pagination"
    dir="ltr"
    id="pagination::r0::next"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>
</nav>
`;
